PeakHub/wwwroot/css/newStyle.css
/* ... */
.buttonA-G {
    color: var(--darkgreen);
    border: 2px solid var(--darkgreen);
}

.buttonB {
    padding: 1rem 2rem;
}

.chevron-container, .chevron-container-up {
    height: 3rem;
    aspect-ratio: 1/1;
    border: 3px solid white;
    border-radius: 50%;
    position: absolute;
    bottom: 2rem;
    left: 50%;
    transform: translate(-50%, 0px);
    box-shadow: 0px 2px 2px black, inset 0px 2px 2px black;
    opacity: 80%;
    z-index: 5;
    cursor: pointer;
}

.chevron-container-up {
    rotate: 180deg;
    bottom: 0;
    transform: translate(50%, -475%);
    box-shadow: none;
}

.chevron-container-up div {
    box-shadow: none;
}

.chevron-container.left {
    box-shadow: 2px 0px 2px black, inset 2px 0px 2px black;
}

.chevron-container.right {
    box-shadow: -2px 0px 2px black, inset -2px 0px 2px black;
}

.chevron {
    content: "";
    height: 1rem;
    aspect-ratio: 1/1;
    position: absolute;
    top: 10%;
    left: 45%;
    transform: translate(-55%);
    rotate: -45deg;
    border-left: 3px solid white;
    border-bottom: 3px solid white;
    transform-origin: center;
    box-shadow: -2px 2px 2px black;
    transition: all 3s ease-in-out;
}

.chevron.left {
    box-shadow: 0px 2px 0px black;
}

.chevron.right {
    box-shadow: -2px 0px 0px black;
}

.chevron-container:hover {
    opacity: 100%;
}


html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    width: 100%;
    height: auto;
    line-height: 1.5rem;
    font-size: 1rem;
    font-family: "Roboto", sans-serif;
}

.h1, h2, h3 {
    text-align: center;
    padding: 1rem 0;
}



/* Nav placement */

#nav-area {
    width: 100%;
    height: var(--navbar-height-s);
    position: fixed;
    z-index: 10000;
    background: linear-gradient(to bottom, var(--black-glass-50), transparent);
    top: 0;
}

#nav-area.hide {
    top: calc(var(--navbar-height-s) * -1);
}

#nav-container {
    max-width: 1300px;
    margin: 0 auto;
    width: 100%;
    height: 100%;
    padding: 0.25rem;
    position: relative;
}

/* Brand Logo */

.brand-logo-container {

    height: var(--navbar-height-s);
    position: absolute;
    bottom: 0;
    left: 0.5rem;
    display: flex;
    color: white;
    z-index: 100;
    border-radius: 50%;
}

.brand-logo-container img {
    height: 90%;
    aspect-ratio: 1/1;
    border-radius: 50%;
    box-shadow: var(--shadow-down);
    cursor: pointer;
    margin: auto;
}

/* TAS PEAKS text next to brand logo */

.brand-logo-container span {
    padding-left: 0.5rem;
    width: 0vw;
    align-self: center;
    font-size: 2.2rem;
    font-weight: 700;
    text-shadow: var(--shadow-down);
    cursor: pointer;
}


/* Hamburger icon styling */

.hamburger-menu {
    position: absolute;
    right: 5vw;
    bottom: 1rem;
    transform: translateY(-50%);
    display: flex;
    flex-direction: column;
    cursor: pointer;
    width: 4rem;
    height: 3rem;
    z-index:100;
}

/* creates the 3 dashes*/

.hamburger-menu::before,
.hamburger-menu::after,
.hamburger-menu input {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    content: "";
    margin: 0 auto;
    width: 3rem;
    height: 3px;
    background-color: white;
    transition: all var(--animation-timing);
    box-shadow: 0px 2px 2px var(--black-glass-50);
}

.hamburger-menu input {
    appearance: none;
    padding: 0;
    outline: none;
    pointer-events: none;
    top: 50%;
    transform: translate(-50%, -50%);
}

.hamburger-menu::before {
    top: 6px;
}

.hamburger-menu::after {
    bottom: 6px;
}

/* turns the 3 dashes to the X */
.hamburger-menu input:checked {
    rotate: 45deg;
    transform: translate(-1.25rem, -0.4rem);
    transform-origin: left;
    z-index: -1;
    box-shadow: 2px 2px 2px var(--black-glass-50);
    background-color: var(--grey);
}

.hamburger-menu:has(input:checked)::before {
    rotate: -45deg;
    box-shadow: -2px 2px 2px var(--black-glass-50);
}

.hamburger-menu:has(input:checked)::after {
    rotate: 45deg;
    box-shadow: none;
}

/* expands the nav links container to display the navlinks */
.hamburger-menu:has(input:checked) + #navlinks-container{
    width:100%;
    height: 95vh;
}

/* Nav link items */

#navlinks-container {
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    height: 0;
    aspect-ratio: 1/1;
    background: linear-gradient(to bottom, var(--black-glass-50), var(--lightgreen) var(--navbar-height-s), var(--lightgreen) 40%, transparent);
    text-align: center;
    overflow: hidden;
    transform-origin: right;
    overflow: hidden;
    z-index: 99;
}

.navbar-list {
    width: 100%;
    position: absolute;
    right: 0;
    top: var(--navbar-height-s);
}

/* nav bar li elements */
.nav-item {
    position: relative;
    font-size: 1.5rem;
    font-weight: 500;
    height: 4rem;
    line-height: 4rem;
    text-align: center;
    width: 100%;
    margin: 0 auto;
    list-style: none;
    overflow: hidden;
}


.nav-link:hover + .nav-link-hover {
    width: 110%;
}

.nav-link {
    color: white;
    text-shadow: var(--shadow-down);
    display: block;
    z-index: 5;
    letter-spacing: 0.25rem;
}

.nav-link:hover {
    color: var(--darkgreen);
}

.nav-link-hover {
    width: 0%;
    aspect-ratio: 1/1;
    border-radius: 50%;
    margin: 0 auto;
    background: var(--grey);
}

/* MAIN - DO NOT tweak this */

main {
    width: 100%;
    height: auto;
}

/*
    HOME PAGE 






*/

#home-bg-parallax {
    width: 100%;
    min-height: 100vh;
    overflow-X: hidden;
}

#bg-video {
    position: fixed;
    bottom: 0%;
    right: 0%;
    min-width: 100%;
    min-height: 100%;
    z-index: -100;
    transform: translateX(calc((100% - 100vw) / 2));
}

.to-top-btn {
    position: fixed;
    bottom: 50%;
    right: 10%;
    z-index: 10000;
    opacity: 50%;
}

.to-top-btn:hover {
    opacity: 100%;
}
/* ... */

